--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: web3dart
-description: Dart library to connect to Ethereum clients. Send transactions and interact with smart contracts!
-version: 3.0.1
+description: A Celo compatible Dart library to connect to Ethereum clients. Send transactions and interact with smart contracts! Pay transaction fees using `feeCurrencies` on Celo.
+version: 3.0.2
 homepage: https://pwa.ir
 repository: https://github.com/xclud/web3dart
 
