--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,13 +23,6 @@ analyzer:
     dead_code: error
     duplicate_import: error
     file_names: error
-    implicit_dynamic_function: ignore
-    implicit_dynamic_parameter: error
-    implicit_dynamic_list_literal: ignore
-    implicit_dynamic_map_literal: ignore
-    implicit_dynamic_method: ignore
-    implicit_dynamic_type: ignore
-    implicit_dynamic_variable: ignore
     invalid_assignment: error
     missing_return: error
     must_be_immutable: error
@@ -65,7 +58,7 @@ linter:
     avoid_print: false
     prefer_interpolation_to_compose_strings: true
     prefer_single_quotes: true
-    public_member_api_docs: flase
+    public_member_api_docs: false
     require_trailing_commas: true
     #    always_use_package_imports: true
     sort_constructors_first: true
